// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given there are no surveys available in blaise should render the page correctly when no surveys are returned 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
      >
        <div
          class="ons-panel__body "
        >
          Welcome to the editing service.
        </div>
      </div>
      <div
        data-testid="Surveys"
      >
        <div
          class="ons-panel ons-panel--info ons-panel--no-title ons-panel--spacious ons-u-mt-m"
        >
          <div
            class="ons-panel__body "
          >
            There are no surveys available
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
    >
      <div
        class="ons-panel__body "
      >
        Welcome to the editing service.
      </div>
    </div>
    <div
      data-testid="Surveys"
    >
      <div
        class="ons-panel ons-panel--info ons-panel--no-title ons-panel--spacious ons-u-mt-m"
      >
        <div
          class="ons-panel__body "
        >
          There are no surveys available
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given there are surveys available in blaise should render the supervisor page correctly when surveys are returned 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
      >
        <div
          class="ons-panel__body "
        >
          Welcome to the editing service.
        </div>
      </div>
      <div
        data-testid="Surveys"
      >
        <br />
        <div
          class="ons-accordion"
          id="survey-accordion"
        >
          <details
            class="ons-collapsible ons-js-collapsible ons-collapsible--accordion "
            data-btn-close="Hide"
            data-group="accordion"
            id="survey-accordion-0"
            open=""
          >
            <summary
              aria-controls="survey-accordion-0"
              aria-expanded="true"
              class="ons-collapsible__heading ons-js-collapsible-heading"
              data-ga-action="Close panel"
              data-testid="survey-accordion-0-heading"
              role="link"
              tabindex="0"
            >
              <div
                class="ons-collapsible__controls"
              >
                <h2
                  class="ons-collapsible__title"
                >
                  FRS
                </h2>
                <span
                  class="ons-collapsible__icon"
                >
                  <svg
                    class="ons-svg-icon"
                    focusable="false"
                    viewBox="0 0 7.5 12.85"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                      transform="translate(-5.02 -1.59)"
                    />
                  </svg>
                </span>
              </div>
            </summary>
            <div
              aria-hidden="false"
              class="ons-collapsible__content ons-js-collapsible-content"
              data-testid="survey-accordion-0-content"
              id="survey-accordion-0-content"
            >
              <div>
                <label
                  class="ons-label"
                  for="select-questionnaire"
                >
                  Select questionnaire
                   
                </label>
                <select
                  class="ons-input "
                  data-testid="select-questionnaire"
                  id="select-questionnaire"
                  name="select"
                >
                  <option
                    data-testid="select-select-questionnaire"
                    disabled=""
                    value=""
                  >
                    Select an option
                  </option>
                  <option
                    data-testid="option-select-questionnaire-FRS2504A_EDIT"
                    selected=""
                    value="FRS2504A_EDIT"
                  >
                    FRS2504A (April 2025)
                  </option>
                  <option
                    data-testid="option-select-questionnaire-FRS2505A_EDIT"
                    value="FRS2505A_EDIT"
                  >
                    FRS2505A (May 2025)
                  </option>
                </select>
              </div>
              <div
                class="questionnaire"
                data-testid="questionnaire"
              >
                <div
                  class="questionnaire"
                >
                  <div
                    class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
                  >
                    <div
                      class="ons-panel__body "
                    >
                      <dl
                        class="ons-metadata ons-metadata__list ons-grid ons-grid--gutterless ons-u-cf ons-u-mb-no"
                        data-testid="FRS2504A_EDIT-supervisor-Content"
                        style="padding: 0px 0px 15px 5px;"
                        title="Questionnares"
                      >
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          Field period:
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          April 2025
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          Total number of cases:
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          1000
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          Number of cases not allocated:
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          966
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          Number of cases allocated:
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          25
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          Number of cases completed:
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          9
                        </dd>
                      </dl>
                    </div>
                  </div>
                  <br />
                  <table
                    class="ons-table"
                    data-testid="FRS2504A_EDIT-editor-table"
                    id="FRS2504A_EDIT-editor-table"
                  >
                    <thead
                      class="ons-table__head"
                    >
                      <tr
                        class="ons-table__row"
                      >
                        <th
                          class="ons-table__header"
                          scope="col"
                        >
                          Editor
                        </th>
                        <th
                          class="ons-table__header"
                          scope="col"
                        >
                          Allocated
                        </th>
                        <th
                          class="ons-table__header"
                          scope="col"
                        >
                          Completed
                        </th>
                        <th
                          class="ons-table__header"
                          scope="col"
                        >
                          Queried
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ons-table__body"
                    >
                      <tr
                        class="ons-table__row"
                      >
                        <td
                          aria-label="FRS2504A_EDIT-Editor"
                          class="ons-table__cell"
                        >
                          Doctor Doom
                        </td>
                        <td
                          aria-label="FRS2504A_EDIT-NumberOfCasesAllocated"
                          class="ons-table__cell status"
                        >
                          10
                        </td>
                        <td
                          aria-label="FRS2504A_EDIT-NumberOfCasesCompleted"
                          class="ons-table__cell "
                        >
                          5
                        </td>
                        <td
                          aria-label="FRS2504A_EDIT-NumberOfCasesQueried"
                          class="ons-table__cell "
                        >
                          0
                        </td>
                      </tr>
                      <tr
                        class="ons-table__row"
                      >
                        <td
                          aria-label="FRS2504A_EDIT-Editor"
                          class="ons-table__cell"
                        >
                          Doctor Strange
                        </td>
                        <td
                          aria-label="FRS2504A_EDIT-NumberOfCasesAllocated"
                          class="ons-table__cell status"
                        >
                          15
                        </td>
                        <td
                          aria-label="FRS2504A_EDIT-NumberOfCasesCompleted"
                          class="ons-table__cell "
                        >
                          4
                        </td>
                        <td
                          aria-label="FRS2504A_EDIT-NumberOfCasesQueried"
                          class="ons-table__cell "
                        >
                          1
                        </td>
                      </tr>
                      <tr
                        class="ons-table__row"
                      >
                        <td
                          aria-label="FRS2504A_EDIT-Editor"
                          class="ons-table__cell"
                        >
                          Doctor Who
                        </td>
                        <td
                          aria-label="FRS2504A_EDIT-NumberOfCasesAllocated"
                          class="ons-table__cell status"
                        >
                          0
                        </td>
                        <td
                          aria-label="FRS2504A_EDIT-NumberOfCasesCompleted"
                          class="ons-table__cell "
                        >
                          0
                        </td>
                        <td
                          aria-label="FRS2504A_EDIT-NumberOfCasesQueried"
                          class="ons-table__cell "
                        >
                          0
                        </td>
                      </tr>
                      <tr
                        class="ons-table__row"
                      >
                        <td
                          class="ons-table__cell"
                        >
                          <a
                            href="/questionnaires/FRS2504A_EDIT/allocate"
                          >
                            Allocate
                          </a>
                           | 
                          <a
                            href="/questionnaires/FRS2504A_EDIT/reallocate"
                          >
                            Reallocate
                          </a>
                        </td>
                        <td
                          class="ons-table__cell"
                        />
                        <td
                          class="ons-table__cell"
                        />
                        <td
                          class="ons-table__cell"
                        />
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </details>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
    >
      <div
        class="ons-panel__body "
      >
        Welcome to the editing service.
      </div>
    </div>
    <div
      data-testid="Surveys"
    >
      <br />
      <div
        class="ons-accordion"
        id="survey-accordion"
      >
        <details
          class="ons-collapsible ons-js-collapsible ons-collapsible--accordion "
          data-btn-close="Hide"
          data-group="accordion"
          id="survey-accordion-0"
          open=""
        >
          <summary
            aria-controls="survey-accordion-0"
            aria-expanded="true"
            class="ons-collapsible__heading ons-js-collapsible-heading"
            data-ga-action="Close panel"
            data-testid="survey-accordion-0-heading"
            role="link"
            tabindex="0"
          >
            <div
              class="ons-collapsible__controls"
            >
              <h2
                class="ons-collapsible__title"
              >
                FRS
              </h2>
              <span
                class="ons-collapsible__icon"
              >
                <svg
                  class="ons-svg-icon"
                  focusable="false"
                  viewBox="0 0 7.5 12.85"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                    transform="translate(-5.02 -1.59)"
                  />
                </svg>
              </span>
            </div>
          </summary>
          <div
            aria-hidden="false"
            class="ons-collapsible__content ons-js-collapsible-content"
            data-testid="survey-accordion-0-content"
            id="survey-accordion-0-content"
          >
            <div>
              <label
                class="ons-label"
                for="select-questionnaire"
              >
                Select questionnaire
                 
              </label>
              <select
                class="ons-input "
                data-testid="select-questionnaire"
                id="select-questionnaire"
                name="select"
              >
                <option
                  data-testid="select-select-questionnaire"
                  disabled=""
                  value=""
                >
                  Select an option
                </option>
                <option
                  data-testid="option-select-questionnaire-FRS2504A_EDIT"
                  selected=""
                  value="FRS2504A_EDIT"
                >
                  FRS2504A (April 2025)
                </option>
                <option
                  data-testid="option-select-questionnaire-FRS2505A_EDIT"
                  value="FRS2505A_EDIT"
                >
                  FRS2505A (May 2025)
                </option>
              </select>
            </div>
            <div
              class="questionnaire"
              data-testid="questionnaire"
            >
              <div
                class="questionnaire"
              >
                <div
                  class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
                >
                  <div
                    class="ons-panel__body "
                  >
                    <dl
                      class="ons-metadata ons-metadata__list ons-grid ons-grid--gutterless ons-u-cf ons-u-mb-no"
                      data-testid="FRS2504A_EDIT-supervisor-Content"
                      style="padding: 0px 0px 15px 5px;"
                      title="Questionnares"
                    >
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        Field period:
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        April 2025
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        Total number of cases:
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        1000
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        Number of cases not allocated:
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        966
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        Number of cases allocated:
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        25
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        Number of cases completed:
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        9
                      </dd>
                    </dl>
                  </div>
                </div>
                <br />
                <table
                  class="ons-table"
                  data-testid="FRS2504A_EDIT-editor-table"
                  id="FRS2504A_EDIT-editor-table"
                >
                  <thead
                    class="ons-table__head"
                  >
                    <tr
                      class="ons-table__row"
                    >
                      <th
                        class="ons-table__header"
                        scope="col"
                      >
                        Editor
                      </th>
                      <th
                        class="ons-table__header"
                        scope="col"
                      >
                        Allocated
                      </th>
                      <th
                        class="ons-table__header"
                        scope="col"
                      >
                        Completed
                      </th>
                      <th
                        class="ons-table__header"
                        scope="col"
                      >
                        Queried
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ons-table__body"
                  >
                    <tr
                      class="ons-table__row"
                    >
                      <td
                        aria-label="FRS2504A_EDIT-Editor"
                        class="ons-table__cell"
                      >
                        Doctor Doom
                      </td>
                      <td
                        aria-label="FRS2504A_EDIT-NumberOfCasesAllocated"
                        class="ons-table__cell status"
                      >
                        10
                      </td>
                      <td
                        aria-label="FRS2504A_EDIT-NumberOfCasesCompleted"
                        class="ons-table__cell "
                      >
                        5
                      </td>
                      <td
                        aria-label="FRS2504A_EDIT-NumberOfCasesQueried"
                        class="ons-table__cell "
                      >
                        0
                      </td>
                    </tr>
                    <tr
                      class="ons-table__row"
                    >
                      <td
                        aria-label="FRS2504A_EDIT-Editor"
                        class="ons-table__cell"
                      >
                        Doctor Strange
                      </td>
                      <td
                        aria-label="FRS2504A_EDIT-NumberOfCasesAllocated"
                        class="ons-table__cell status"
                      >
                        15
                      </td>
                      <td
                        aria-label="FRS2504A_EDIT-NumberOfCasesCompleted"
                        class="ons-table__cell "
                      >
                        4
                      </td>
                      <td
                        aria-label="FRS2504A_EDIT-NumberOfCasesQueried"
                        class="ons-table__cell "
                      >
                        1
                      </td>
                    </tr>
                    <tr
                      class="ons-table__row"
                    >
                      <td
                        aria-label="FRS2504A_EDIT-Editor"
                        class="ons-table__cell"
                      >
                        Doctor Who
                      </td>
                      <td
                        aria-label="FRS2504A_EDIT-NumberOfCasesAllocated"
                        class="ons-table__cell status"
                      >
                        0
                      </td>
                      <td
                        aria-label="FRS2504A_EDIT-NumberOfCasesCompleted"
                        class="ons-table__cell "
                      >
                        0
                      </td>
                      <td
                        aria-label="FRS2504A_EDIT-NumberOfCasesQueried"
                        class="ons-table__cell "
                      >
                        0
                      </td>
                    </tr>
                    <tr
                      class="ons-table__row"
                    >
                      <td
                        class="ons-table__cell"
                      >
                        <a
                          href="/questionnaires/FRS2504A_EDIT/allocate"
                        >
                          Allocate
                        </a>
                         | 
                        <a
                          href="/questionnaires/FRS2504A_EDIT/reallocate"
                        >
                          Reallocate
                        </a>
                      </td>
                      <td
                        class="ons-table__cell"
                      />
                      <td
                        class="ons-table__cell"
                      />
                      <td
                        class="ons-table__cell"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </details>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given there the blaise rest api is not available should render the page correctly for the user when an error occurs 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
      >
        <div
          class="ons-panel__body "
        >
          Welcome to the editing service.
        </div>
      </div>
      <div
        data-testid="Surveys"
      >
        <div
          class="ons-panel ons-panel--error ons-panel--no-title  ons-u-mt-m"
        >
          <div
            class="ons-panel__body "
          >
            <h4>
              Something went wrong
            </h4>
            <p
              data-testid="ErrorMessage"
            >
              try again in a few minutes
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
    >
      <div
        class="ons-panel__body "
      >
        Welcome to the editing service.
      </div>
    </div>
    <div
      data-testid="Surveys"
    >
      <div
        class="ons-panel ons-panel--error ons-panel--no-title  ons-u-mt-m"
      >
        <div
          class="ons-panel__body "
        >
          <h4>
            Something went wrong
          </h4>
          <p
            data-testid="ErrorMessage"
          >
            try again in a few minutes
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
